# solmap

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml  token_metadata.json
.github/workflows/: build.yml  test.yml
cli/: Cargo.toml
cli/src/: args.rs  constants.rs  lib.rs  main.rs
cli/src/commands/: check.rs  init.rs  instructions.rs  mint.rs  mod.rs  total_minted.rs
example-renderer/solmap-render/: package-lock.json  package.json  wrangler.toml
example-renderer/solmap-render/src/: index.ts
example-renderer/solmap-render/src/visualization/: fetching.ts  index.ts  render.ts
programs/cli/: Cargo.toml
programs/cli/src/commands/: instructions.rs
programs/solmap/: Cargo.toml
programs/solmap/src/: error.rs  lib.rs  utils.rs
scripts/: install.sh
src/client/: programId.ts
src/client/accounts/: SlotIndex.ts  index.ts
src/client/errors/: custom.ts
src/client/instructions/: addMcc.ts  index.ts  initIndex.ts  mint.ts
tests/: solmap.test.ts  solmap.ts  test_keypair.json  test_mcc.json
