[package]
name = "solmap-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solmap"
path = "src/main.rs"

[features]
anchor-test = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bitvec = "1"
borsh = { version = "0.9.3" }
clap = { version = "4.4.10", features = ["derive"] }
dirs = "5.0.1"
indexmap = { version = "2.1.0", features = ["serde"] }
metaboss_lib = "0.16.1"
serde = "1.0.193"
serde_json = "1.0.108"
serde_with = "3.4.0"
serde_yaml = "0.9.27"
solana-client = "~1.16"
solana-logger = "~1.16"
solana-program = "~1.16"
solana-sdk = "~1.16"
solmap = { version = "0.1.0", path = "../programs/solmap", features = [
    "no-entrypoint",
] }
