[package]
name = "solmap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solmap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
anchor-test = []

[dependencies]
anchor-lang = { version = "0.29.0" }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
bitvec = "1"
bytemuck = "1.14.0"
libreplex_inscriptions = { version = "0.3.0", features = ["cpi"] }
libreplex_legacy = { version = "0.1.0", features = ["cpi"] }
mpl-token-metadata = "3.2.1"
solana-program = "1.16"
